--- a/src/components/tabs/ProjectsTab.astro
+++ b/src/components/tabs/ProjectsTab.astro
@@ -22,7 +22,7 @@ import { projects } from "../../data/projects";
   </ul>
   <div class="filter-select-box">
     <button class="filter-select" data-select>
-      <div class="select-value" data-selecct-value>Select category</div>
+      <div class="select-value" data-select-value>Select category</div>
       <div class="select-icon">
         <ion-icon name="chevron-down"></ion-icon>
       </div>
