Update favicon references in BaseLayout to use SVG format
- Replaced the favicon and alternate icon links in BaseLayout from me-photo.png to ts-favicon.svg for improved branding consistency and modern asset usage.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -61,8 +61,8 @@ const jsonLd = {
     </script>
 
     <!-- favicon -->
-    <link rel="icon" href="/assets/images/me-photo.png" type="image/png" />
-    <link rel="alternate icon" href="/assets/images/me-photo.png" type="image/png" />
+    <link rel="icon" href="/assets/images/ts-favicon.svg" type="image/png" />
+    <link rel="alternate icon" href="/assets/images/ts-favicon.svg" type="image/png" />
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
